deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-app
  template:
    metadata:
      labels:
        app: k8s-app
    spec:
      containers:
        - name: k8s-app-container
          image: cloudiod/k8s-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "0.5"
              memory: "512Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
