service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
  type: NodePort
  selector:
    app: k8s-app
