ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: detection-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: api.detection.local
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: my-service-clusterip
                port:
                  number: 80
    - host: localhost
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: my-service-clusterip
                port:
                  number: 80
